--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "my-app",
+  "name": "pplgone",
   "version": "0.1.0",
+  "description": "Website for my school class",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -9,6 +10,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "ag-grid-community": "^34.1.2",
+    "ag-grid-react": "^34.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
@@ -28,5 +31,9 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
-  }
+  },
+  "keywords": [],
+  "author": "AryaReal",
+  "license": "ISC",
+  "packageManager": "pnpm@10.15.1"
 }
