--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pplgone",
-  "version": "0.1.0",
+  "version": "0.4.0",
   "description": "Website for my school class",
   "private": true,
   "scripts": {
@@ -11,14 +11,32 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.57.2",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/blob": "^1.1.1",
     "ag-grid-community": "^34.1.2",
     "ag-grid-react": "^34.1.2",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
   },
