feat: update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pplgone",
+  "name": "class-site",
   "version": "0.4.0",
   "description": "Website for my school class",
   "private": true,
