--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
-    "next": "15.5.9",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "^19.2.4",
     "react-day-picker": "^9.9.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
