--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "class-site",
+  "name": "xpplgone-web",
   "version": "0.5.8",
   "description": "Website for my school class",
   "private": true,
